Test/traits/TraitMultiModule.dfy.expect
TraitMultiModule.dfy(22,19): Error: class 'C2' is in a different module than trait 'M1.T1'. A class may only extend a trait in the same module, unless the parent trait is annotated with {:termination false}.
TraitMultiModule.dfy(30,22): Error: class 'C2' is in a different module than trait 'M1.T1'. A class may only extend a trait in the same module, unless the parent trait is annotated with {:termination false}.
2 resolution/type errors detected in TraitMultiModule.dfy
